--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -1,9 +1,22 @@
 @charset "utf-8";
 @namespace epub "http://www.idpf.org/2007/ops";
 
+header{
+	font-variant: small-caps;
+	margin: 1em 0;
+}
+
 footer{
 	margin-top: 1em;
 	text-align: right;
+}
+
+[epub|type~="z3998:letter"] > header{
+	text-align: initial;
+}
+
+[epub|type~="z3998:signature"]{
+	font-variant: small-caps;
 }
 
 [epub|type~="z3998:hymn"] p,
@@ -13,9 +26,7 @@ footer{
 	text-indent: 0;
 }
 
-[epub|type~="z3998:hymn"] p + p,
-[epub|type~="z3998:song"] p + p,
-[epub|type~="z3998:verse"] p + p{
+[epub|type~="z3998:song"] p + p{
 	margin-top: 1em;
 }
 
@@ -41,4 +52,8 @@ p span.i1{
 p span.i2{
 	padding-left: 3em;
 	text-indent: -1em;
+}
+
+#chapter-3-19 [epub|type~="z3998:salutation"]{
+	font-variant: normal;
 }
